# ELEP

./: README.md  pyproject.toml  requirements.txt  setup.cfg
ELEP/elep/: ensemble_statistics.py  mbf.py  mbf_utils.py  trigger_func.py
ELEP/src/: Meta_learners.py  ensemble_coherence.py  ensemble_statistics.py  mbf.py  mbf_utils.py  trigger_func.py
ELEP/utils/: plot_utils.py
docs/tutorials/: ELEP.code-workspace  ELEP_paper_figures.ipynb  ensemble_learners.py  examble_batch_prediction.ipynb  example_BB_MB_prediction.ipynb  example_BB_continuous_data_PB_B204.ipynb  example_BB_continuous_data_UW_SHW.ipynb  example_BB_window_data_PNW.ipynb  example_BB_window_data_picking.ipynb  example_FB_continuous_data.ipynb  example_FB_continuous_data_PB_B204.ipynb  example_FB_continuous_data_UW_SHW.ipynb  example_FB_window_data_picking.ipynb  example_MB_continuous_data.ipynb  example_MB_continuous_data_PB_B204.ipynb  example_OBS_prediction.ipynb  example_continuous_data.ipynb  example_metalearner_training.ipynb  example_simple_ensemble.ipynb  prepare_training_dataset.ipynb
docs/tutorials/data/: PB.B204..EH.ms  PB.B204.2022.037.csv  UW.SHW..HH.ms  UW.SHW.2022.037.csv  metadata.csv  pnw.json.v1  pnw.pt.v1
